# bech32py

./: pyproject.toml  test.py
bech32py/: bech32.py
